--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,6 +36,7 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
+    "cronstrue": "^2.61.0",
     "dayjs": "1.11.13",
     "lucide-react": "0.509.0",
     "next-themes": "0.4.6",
