--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,5 +59,5 @@ jobs:
         working-directory: apps/server
         run: |
           go mod download
-          go test -v ./...
+          go test -v ./src/...
 
