--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -63,7 +63,7 @@ jobs:
         with:
           context: ./apps/web
           push: true
-          # platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}-web:${{ github.event.inputs.version }}
             ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}-web:latest
@@ -76,7 +76,7 @@ jobs:
         with:
           context: ./apps/server
           push: true
-          # platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}-server:${{ github.event.inputs.version }}
             ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}-server:latest
