--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,12 @@ DB_USER=root
 DB_PASS=password
 DB_NAME=peekaping
 DB_HOST=localhost
-DB_PORT=6001
+DB_PORT=27017
 ACCESS_TOKEN_EXPIRED_IN=1m
 ACCESS_TOKEN_SECRET_KEY=secret-key
 REFRESH_TOKEN_EXPIRED_IN=60m
 REFRESH_TOKEN_SECRET_KEY=secret-key
-DEV_MODE=true # logging
+MODE=prod # logging
 TZ="America/New_York"
 
 
