Feature/sql db support (#18)
* feat: initial integrate SQL database support with Bun ORM and add migration script

- Added support for MySQL and PostgreSQL databases using Bun ORM.
- Introduced a new migration script for creating database migrations.
- Updated configuration to allow selection of database type.
- Refactored repository patterns to accommodate both SQL and MongoDB implementations.
- Updated dependencies in go.mod and go.sum for new database drivers.

* feat: add migration docker container, add different database docker compose files

* refactor: update UUID generation method in migration script and adjust timeout data type

* feat: implement UUID generation for new records across multiple repositories and add GetMaintenancesByMonitorID method in maintenance repository

* refactor: streamline database repository registration by utilizing a utility function across multiple modules

* refactor: remove deprecated uptime stats endpoint and related code, streamline monitor service and controller

* feat: add Docker Compose configurations for development and production environments with SQLite support

* refactor: remove user_id column and foreign key constraint from maintenances table in migration script

* refactor: remove user_id field from maintenance models and related files, streamline maintenance service and repository interactions

* feat: enhance maintenance repository to marshal and unmarshal JSON arrays for weekdays and days of month

* feat: implement upsert logic in setting and stats repositories to handle updates and inserts for different dialects

* refactor: remove unused index on maintenances table to optimize database schema

* feat: add production Docker Compose configuration for MongoDB and application services

* chore: remove deprecated .env.example and docker-compose.prod.yml files; update README for new MongoDB and Postgres configurations

* chore: update README to reflect changes in Docker Compose configurations and database setup

* 

--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -24,8 +24,8 @@ WORKDIR /app
 # Copy the pre-built binary file from the previous stage
 COPY --from=builder /app/main .
 
-# Expose port 8080 to the outside world (change if your app uses a different port)
-EXPOSE 8033
+# Expose port 8034 to the outside world
+EXPOSE 8034
 
 # Command to run the executable
 CMD ["./main"]
