--- a/docker-compose.mongo.yml
+++ b/docker-compose.mongo.yml
@@ -1,9 +1,9 @@
 services:
   mongodb:
     image: mongo:7
-    restart: always
+    restart: unless-stopped
     ports:
-      - "${DB_PORT}:27017"
+      - "${DB_PORT:-27017}:27017"
     env_file:
       - .env
     environment:
@@ -12,3 +12,5 @@ services:
       MONGO_INITDB_DATABASE: ${DB_NAME}
     volumes:
       - ./.data/mongodb:/data/db
+
+
