fix: mTLS are not saved when creating monitor
- Fix saving mTLS certificates when creating monitors
- Fix saving accepted status codes when creating monitors
- Fix saving authentication methods when creating monitors
- Added a new script to generate mTLS certificates for testing.
- Created an mTLS server using Express to handle client certificate authentication.
- Introduced scripts for displaying certificate contents and setting up the server.
- Updated README with setup instructions and available endpoints for testing.
- Added .gitignore to exclude generated certificates and logs.

--- a/apps/fake-server/package.json
+++ b/apps/fake-server/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "node index.js"
+    "dev": "node index.js",
+    "generate-certs": "chmod +x generate-certs.sh && ./generate-certs.sh",
+    "show-certs": "chmod +x show-certs.sh && ./show-certs.sh",
+    "mtls": "node mtls-server.js",
+    "setup": "npm run generate-certs && echo '\n✅ Setup complete! Run npm run mtls to start the mTLS server'"
   },
   "keywords": [],
   "author": "",
