feat: add reset monitor data endpoint and related functionality (#22)
* feat: add reset monitor data endpoint and related functionality

- Introduced a new POST endpoint `/monitors/{id}/reset` to reset monitor data, including heartbeats and stats.
- Implemented the `ResetMonitorData` method in the Monitor service to handle the reset logic.
- Updated the Monitor controller and routes to support the new endpoint.
- Added necessary API documentation and TypeScript types for the new endpoint.
- Enhanced health check supervisor to support jitter configuration during monitor startup.
- Added `DeleteByMonitorID` methods in heartbeat and stats repositories for data cleanup.

* feat: add DB_TYPE environment variable for PostgreSQL service

- Introduced DB_TYPE environment variable in the PostgreSQL service configuration to specify the database type as 'postgres', enhancing clarity and configurability.

* fix: refine query invalidation logic in MonitorPage component

- Updated the query invalidation predicates to include checks for the monitor ID in addition to the existing query key checks, ensuring more accurate cache invalidation for monitor stats and heartbeats.

* fix: log error when updated monitor is not found

- Added error logging in the ResetMonitorData method to capture instances where the monitor ID cannot be found, improving traceability and debugging capabilities.

--- a/apps/server/docs/swagger.yaml
+++ b/apps/server/docs/swagger.yaml
@@ -1928,6 +1928,38 @@ paths:
       summary: Get paginated heartbeats for a monitor
       tags:
       - Monitors
+  /monitors/{id}/reset:
+    post:
+      parameters:
+      - description: Monitor ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.ApiResponse-any'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.APIError'
+      security:
+      - BearerAuth: []
+      summary: Reset monitor data (heartbeats and stats)
+      tags:
+      - Monitors
   /monitors/{id}/stats/points:
     get:
       parameters:
