--- a/docker-compose.prod.postgres.yml
+++ b/docker-compose.prod.postgres.yml
@@ -50,6 +50,7 @@ services:
     environment:
       DB_HOST: postgres
       DB_PORT: 5432
+      DB_TYPE: postgres
     networks:
       - appnet
 
