Feat/ping and tcp (#26)
* feat: initial implementation for monitor clone

* feat: enhance monitor deserialization with error handling and authentication support

- Improved error handling for JSON parsing in HTTP and Push monitor deserialization.
- Added support for various authentication methods (basic, OAuth2, NTLM, mTLS) in HTTP monitor configuration.
- Updated Push monitor deserialization to retrieve push token from API or config.
- Enhanced MonitorFormProvider to handle form population for edit and clone modes.

* refactor: simplify monitor form context by removing clone functionality

- Removed the cloneMonitor function from MonitorFormProvider, focusing on edit mode only.
- Updated form population logic to eliminate clone data handling.
- Enhanced type safety for navigation state in NewMonitor component.

* refactor: remove unused useLocation import from monitor form context

- Eliminated the unnecessary useLocation import to streamline the monitor form context code.

* fix: update default monitor name in deserialization logic

- Changed the default name for push monitors from "Monitor Copy" to "My Monitor" in the deserialization function, enhancing clarity for users.

* feat: expand monitor types to include TCP and Ping

- Updated monitor model and documentation to support new connection types: TCP and Ping.
- Enhanced deserialization logic and form context to accommodate the new monitor types.
- Updated UI components to reflect the addition of TCP and Ping monitors, improving monitoring capabilities.

* refactor: remove form reset logic in edit mode from Ping and TCP components

- Eliminated the useEffect hook responsible for resetting the form with monitor data in edit mode from both PingForm and TCPForm components, streamlining the form handling logic.

* refactor: remove unused import from Ping component

- Eliminated the unused useEffect import in the Ping component to streamline the code and improve readability.

* refactor: remove ping count configura

--- a/apps/server/docs/swagger.yaml
+++ b/apps/server/docs/swagger.yaml
@@ -423,9 +423,7 @@ definitions:
         example: 16
         type: integer
       type:
-        description: 'connection type: http, etc'
-        enum:
-        - http
+        description: 'connection type: http, tcp, ping, etc'
         example: http
         type: string
       updated_at:
@@ -835,9 +833,7 @@ definitions:
         example: 16
         type: integer
       type:
-        description: 'connection type: http, etc'
-        enum:
-        - http
+        description: 'connection type: http, tcp, ping, etc'
         example: http
         type: string
       updated_at:
