feat: add end-to-end testing setup with Playwright (#28)
* feat: add end-to-end testing setup with Playwright

* chore: update Playwright configuration and dependencies

- Added Playwright testing dependencies to package.json.
- Updated .gitignore to include Playwright-related directories.
- Removed e2e directory and its contents, consolidating Playwright tests into the main project structure.

* feat: add end-to-end testing for login and registration

- Introduced new end-to-end tests for user login and registration using Playwright.
- Updated package.json to include an e2e script for running Playwright tests.
- Commented out existing test cases for clarity and focus on new functionality.

* chore: add service startup step to Playwright workflow

- Included a step to start services using Docker Compose in the Playwright workflow, enhancing the testing environment setup.

* chore: update Docker Compose command in Playwright workflow

- Changed the Docker Compose command from `docker-compose` to `docker compose` for improved compatibility and consistency in the Playwright workflow.

* chore: enhance Playwright workflow with service readiness checks and environment setup

- Added steps to create a .env file and wait for services to be healthy before running Playwright tests.
- Included a step to stop services after tests are completed, ensuring a clean environment.

* chore: update Playwright workflow and tests

- Modified health check URL in the Playwright workflow to point to the correct API endpoint.
- Commented out the login error test case in the example.spec.ts for clarity, while retaining the registration test and adding a wait for URL step after user creation.

* chore: enhance Playwright workflow with container log visibility and improved health check timing

- Added steps to display container status and logs in the Playwright workflow for better debugging.
- Adjusted the health check timing to reduce wait time, improving the overall efficiency of the workflo

--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -220,9 +220,15 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}-migrate:latest-arm64
           docker manifest push ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}-migrate:latest
 
+  playwright-tests:
+    needs: create-manifest
+    uses: ./.github/workflows/playwright-reusable.yml
+    with:
+      container-tag: ${{ github.event.inputs.version }}
+
   release:
     runs-on: ubuntu-latest
-    needs: create-manifest
+    needs: playwright-tests
     steps:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
