--- a/.env.prod.example
+++ b/.env.prod.example
@@ -5,7 +5,7 @@ DB_HOST=localhost
 # DB_PORT=27017
 # DB_TYPE=mongo
 
-# PORT=8034
+PORT=8034
 CLIENT_URL="http://localhost:5173"
 ACCESS_TOKEN_EXPIRED_IN=1m
 ACCESS_TOKEN_SECRET_KEY=secret-key
