--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "e2e": "pnpm exec playwright test"
   },
   "devDependencies": {
+    "@playwright/test": "^1.53.1",
+    "@types/node": "22.15.17",
     "turbo": "^2.5.4"
   },
   "packageManager": "pnpm@9.0.0",
