feat: add ping field to heartbeat and monitor data structures
- Introduced a new 'ping' field of type integer in the heartbeat and monitor data structures across the API and documentation.
- Updated relevant SQL queries and DTOs to accommodate the new field, ensuring consistency in data handling.
- Enhanced Swagger documentation to reflect the addition of the 'ping' field for better API clarity.

--- a/apps/server/docs/swagger.yaml
+++ b/apps/server/docs/swagger.yaml
@@ -814,6 +814,8 @@ definitions:
         type: string
       id:
         type: string
+      ping:
+        type: integer
       status:
         $ref: '#/definitions/shared.MonitorStatus'
       time:
