--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -8,8 +8,8 @@ on:
         required: true
         type: string
       changelog:
-        description: 'Changelog for this release'
-        required: true
+        description: 'Changelog for this release (optional - will auto-generate if not provided)'
+        required: false
         type: string
 
 jobs:
@@ -27,6 +27,40 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch full history for changelog generation
+
+      - name: Generate changelog (amd64 only)
+        if: matrix.arch == 'amd64'
+        id: changelog
+        run: |
+          # Make the script executable
+          chmod +x scripts/generate-changelog.sh
+
+          # Generate changelog and capture output
+          if [ -n "${{ github.event.inputs.changelog }}" ]; then
+            echo "Using provided changelog"
+            CHANGELOG="${{ github.event.inputs.changelog }}"
+          else
+            echo "Auto-generating changelog"
+            # Run script and capture output without colors
+            CHANGELOG=$(NO_COLOR=1 ./scripts/generate-changelog.sh | sed 's/\x1b\[[0-9;]*m//g')
+          fi
+
+          # Save changelog to output and file
+          echo "changelog<<EOF" >> $GITHUB_OUTPUT
+          echo "$CHANGELOG" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+          # Also save to a file for artifact
+          echo "$CHANGELOG" > changelog.txt
+
+      - name: Upload changelog artifact (amd64 only)
+        if: matrix.arch == 'amd64'
+        uses: actions/upload-artifact@v4
+        with:
+          name: changelog
+          path: changelog.txt
 
       - name: Log in to GHCR
         uses: docker/login-action@v3
@@ -230,12 +264,29 @@ jobs:
     runs-on: ubuntu-latest
     needs: playwright-tests
     steps:
+      - name: Download changelog artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: changelog
+          path: .
+
+      - name: Read changelog
+        id: read_changelog
+        run: |
+          if [ -f changelog.txt ]; then
+            echo "changelog<<EOF" >> $GITHUB_OUTPUT
+            cat changelog.txt >> $GITHUB_OUTPUT
+            echo "EOF" >> $GITHUB_OUTPUT
+          else
+            echo "changelog=${{ github.event.inputs.changelog }}" >> $GITHUB_OUTPUT
+          fi
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.event.inputs.version }}
           body: |
-            ${{ github.event.inputs.changelog }}
+            ${{ steps.read_changelog.outputs.changelog }}
 
             ## Docker Images
 
