feat: add deploy-demo job to Docker release workflow
- Introduced a new job in the Docker release workflow to handle demo deployments.
- The deploy-demo job depends on the release job and inherits secrets for secure access.
- This enhancement streamlines the deployment process for demo environments.

--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -301,3 +301,10 @@ jobs:
             - Migrate: `${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}-migrate:${{ github.event.inputs.version }}` / `${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}-migrate:latest`
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  deploy-demo:
+    needs: release
+    uses: ./.github/workflows/deploy-demo.yml
+    with:
+      version: ${{ github.event.inputs.version }}
+    secrets: inherit
