--- a/apps/web/nginx.conf
+++ b/apps/web/nginx.conf
@@ -3,6 +3,13 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
+  # env.js: no cache (for environment configuration)
+  location = /env.js {
+    try_files $uri =404;
+    expires -1;
+    add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+  }
+
   # hashed assets: cache forever
   location ~* \.(js|css|mjs|woff2?|svg|png|jpe?g|gif|ico)$ {
     try_files $uri =404;
