Update GitHub Actions workflow for documentation deployment
- Renamed the workflow to "Deploy to GitHub Pages" for clarity.
- Consolidated build and deployment steps into separate jobs for better organization.
- Updated Node.js version specification and added caching for pnpm.
- Streamlined deployment permissions and environment configuration.
- Enhanced artifact upload step for improved deployment process.

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,4 +1,4 @@
-name: Deploy Documentation
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -11,66 +11,59 @@ on:
     paths:
       - 'apps/docs/**'
       - '.github/workflows/deploy-docs.yml'
-  workflow_dispatch:
-    inputs:
-      deploy:
-        description: 'Deploy to GitHub Pages'
-        required: false
-        default: true
-        type: boolean
 
 # Allow one concurrent deployment
 concurrency:
-  group: "docs-deploy"
+  group: "pages"
   cancel-in-progress: true
 
-# Sets permissions of the GITHUB_TOKEN to allow git operations
-permissions:
-  contents: write
-
 jobs:
-  # Build and Deploy job
-  build-and-deploy:
+  build:
+    name: Build Docusaurus
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Get full history for git operations
+          fetch-depth: 0
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 20
+          cache: 'pnpm'
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
         with:
           version: 9.0.0
 
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build documentation
+      - name: Build website
         run: pnpm --filter docs build
 
+      - name: Upload Build Artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: apps/docs/build
+
+  deploy:
+    name: Deploy to GitHub Pages
+    needs: build
+    if: github.ref == 'refs/heads/main'
+
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write # to deploy to Pages
+      id-token: write # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    runs-on: ubuntu-latest
+    steps:
       - name: Deploy to GitHub Pages
-        if: github.ref == 'refs/heads/main' || (github.event_name == 'workflow_dispatch' && inputs.deploy == true)
-        run: pnpm --filter docs deploy
-        env:
-          GIT_USER: ${{ github.actor }}
-          GIT_PASS: ${{ secrets.GITHUB_TOKEN }}
-          USE_SSH: false
+        id: deployment
+        uses: actions/deploy-pages@v4
