Update GitHub Actions workflows to ignore documentation and markdown files
- Added paths-ignore settings to the Playwright and Test workflows to exclude changes in documentation and markdown files from triggering workflows.
- This change helps to reduce unnecessary workflow runs when documentation files are updated.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,20 @@ name: Test and Lint
 
 on:
   pull_request:
+    paths-ignore:
+      - 'apps/docs/**'
+      - '*.md'
+      - 'README.md'
+      - 'CHANGELOG.md'
+      - 'LICENSE'
     branches: [ main, master ]
   push:
+    paths-ignore:
+      - 'apps/docs/**'
+      - '*.md'
+      - 'README.md'
+      - 'CHANGELOG.md'
+      - 'LICENSE'
     branches: [ main, master ]
     tags:
       - 'v*'
