--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -13,7 +13,7 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "dev": "docusaurus start"
+    "dev": "docusaurus start --no-open"
   },
   "dependencies": {
     "@docusaurus/core": "3.8.1",
