Enhance configuration validation in config.go (#63)
* Enhance configuration validation in config.go

- Added validation tags to configuration fields to enforce required values and specific formats (e.g., port, URL).
- Implemented a validateConfig function to validate the configuration struct and custom rules for database settings.
- Introduced applyDefaults function to set default values for configuration fields if not provided.
- Improved error handling for validation failures with detailed messages for each field.
- Updated LoadConfig function to include validation and default value application steps.

* Refactor applyDefaults function in config.go to return applied defaults

- Modified applyDefaults function to return a map of applied default values for configuration fields.
- Updated LoadConfig function to log the number of defaults applied alongside environment variables loaded.
- Enhanced handling of default values for different data types, including special case for time.Duration.

* Add CLIENT_URL environment variable to Playwright workflow configuration

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -49,6 +49,7 @@ jobs:
         DB_PASS=password
 
         # Server Configuration
+        CLIENT_URL=http://localhost:8383
         PORT=8034
         JWT_SECRET=test-secret-key-for-playwright-tests
         ACCESS_TOKEN_EXPIRED_IN=1h
