feat: add gRPC Keyword monitor support (#43)
* feat: add gRPC Keyword monitor support

- Introduced a new gRPC Keyword monitor type in the healthcheck executor registry.
- Updated the monitor registry to include deserialization and component mapping for gRPC Keyword.
- Enhanced the general monitor types list to include gRPC Keyword with a description.
- Modified the monitor form context to support gRPC Keyword schema and form handling, ensuring comprehensive monitoring capabilities.
- Added necessary dependencies for gRPC and protobuf in the Go module.

* Add gRPC server implementation and update package configuration

- Introduced a new gRPC server in grpc-server.js, implementing Health and Test services with multiple methods for testing.
- Updated package.json to include gRPC dependencies and added new scripts for starting the gRPC server.
- Enhanced README.md with gRPC server usage instructions and testing scenarios.
- Added temp-protos directory to .gitignore to exclude temporary proto files from version control.

* Remove "General" header from GRPCKeywordForm component for cleaner UI

* Remove package-lock.json and pnpm-lock.yaml files from fake-server and web applications to streamline dependency management.

* Add package-lock.json to .gitignore to prevent tracking of lock file in version control

* Update pnpm-lock.yaml to add gRPC and protobuf dependencies

- Added '@grpc/grpc-js' and '@grpc/proto-loader' with specified versions.
- Included multiple protobuf-related packages to enhance gRPC functionality.
- Updated dependencies for existing packages to ensure compatibility.

* Update Dockerfile to remove pnpm-lock.yaml from dependencies installation process

* Refactor Dockerfile for web app to streamline build process

- Install pnpm globally and copy necessary workspace configuration files.
- Update dependency installation to use monorepo root and ensure proper resolution.
- Adjust source code copying and build commands for the web app.
- Modify asset cop

--- a/apps/fake-server/package.json
+++ b/apps/fake-server/package.json
@@ -7,13 +7,18 @@
     "generate-certs": "chmod +x generate-certs.sh && ./generate-certs.sh",
     "show-certs": "chmod +x show-certs.sh && ./show-certs.sh",
     "mtls": "node mtls-server.js",
-    "setup": "npm run generate-certs && echo '\n✅ Setup complete! Run npm run mtls to start the mTLS server'"
+    "grpc": "node grpc-server.js",
+    "grpc-tls": "npm run generate-certs && node grpc-server.js",
+    "setup": "npm run generate-certs && echo '\n✅ Setup complete! Run npm run mtls to start the mTLS server'",
+    "setup-grpc": "npm install && npm run generate-certs && echo '\n✅ gRPC setup complete! Run npm run grpc to start the gRPC server'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "@grpc/grpc-js": "^1.9.0",
+    "@grpc/proto-loader": "^0.7.8"
   }
 }
