--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -104,7 +104,8 @@ jobs:
         id: build_ui
         uses: docker/build-push-action@v6
         with:
-          context: ./apps/web
+          context: .
+          file: ./apps/web/Dockerfile
           push: true
           platforms: ${{ matrix.platform }}
           provenance: false
