--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -126,7 +126,8 @@ jobs:
         id: build_ui
         uses: docker/build-push-action@v6
         with:
-          context: ./apps/web
+          context: .
+          file: ./apps/web/Dockerfile
           push: true
           platforms: ${{ matrix.platform }}
           provenance: false
