--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -2,26 +2,37 @@ FROM node:22-alpine AS builder
 
 WORKDIR /app
 
-# Install dependencies
-COPY package.json pnpm-lock.yaml ./
-RUN npm install -g pnpm && pnpm install
+# Install pnpm globally
+RUN npm install -g pnpm
 
-# Copy source code
-COPY . .
+# Copy workspace configuration and lock file from monorepo root
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 
-# Build the app
-RUN pnpm run build
+# Copy patches directory if it exists
+COPY patches ./patches/
+
+# Copy package.json files from all apps for dependency resolution
+COPY apps/web/package.json ./apps/web/
+
+# Install dependencies from monorepo root
+RUN pnpm install --frozen-lockfile
+
+# Copy web app source code
+COPY apps/web ./apps/web/
+
+# Build the web app
+RUN pnpm --filter web run build
 
 # Stage 2: Serve with Nginx
 FROM nginx:alpine
 
 # Copy built assets from builder
-COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=builder /app/apps/web/dist /usr/share/nginx/html
 
-COPY docker-entrypoint.sh /docker-entrypoint.d/01-envsubst.sh
+COPY apps/web/docker-entrypoint.sh /docker-entrypoint.d/01-envsubst.sh
 RUN chmod +x /docker-entrypoint.d/01-envsubst.sh
 
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY apps/web/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
