--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,12 +38,15 @@
     "cmdk": "1.1.1",
     "cronstrue": "^2.61.0",
     "dayjs": "1.11.13",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "0.509.0",
     "next-themes": "0.4.6",
     "patch-package": "8.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "7.56.3",
+    "react-i18next": "^15.5.3",
     "react-qr-code": "2.0.15",
     "react-router-dom": "6.30.0",
     "recharts": "2.15.3",
